--- a/app/src/main/res/layout/activity_reminder_description.xml
+++ b/app/src/main/res/layout/activity_reminder_description.xml
@@ -34,12 +34,12 @@
             android:layout_marginLeft="24dp"
             android:layout_marginTop="24dp"
             android:text="@string/title"
-            app:layout_constraintBaseline_toBaselineOf="@id/labeltxt"
+            app:layout_constraintBaseline_toBaselineOf="@id/titletxt"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/reminderDescriptionLabel" />
 
         <TextView
-            android:id="@+id/labeltxt"
+            android:id="@+id/titletxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
